--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/BlueCornSoftware/utils#readme",
   "devDependencies": {
     "husky": "^1.1.1",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.3"
   }
 }
