--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "utils",
+  "name": "bluecornsoftware-utils",
   "version": "1.0.0",
   "description": "Generic Function Library",
   "main": "index.js",
