adds some workspace config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "files.insertFinalNewline": true,
+  "editor.tabSize": 2,
   "files.associations": {
     "./**/*.sh": "bash",
     ".huskyrc": "json"
