--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Generic Function Library",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "npx webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,9 @@
     "husky": "^1.1.1",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.3",
-    "typescript": "^3.1.1"
+    "ts-loader": "^5.2.1",
+    "typescript": "^3.1.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
