--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "noImplicitAny": false,
     "module": "es6",
     "target": "es5",
-    "allowJs": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
   }
 }
