--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^23.3.3",
     "husky": "^1.1.1",
     "jest": "^23.6.0",
+    "prettier": "^1.14.3",
     "ts-jest": "^23.10.3",
     "ts-loader": "^5.2.1",
     "typescript": "^3.1.1",
