--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "npx webpack --config webpack.config.js"
+    "build": "tsc -p tsconfig2.json"
   },
   "repository": {
     "type": "git",
