--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bluecornsoftware-functions",
   "version": "1.0.0",
   "description": "Generic Function Library",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
     "build": "tsc -p tsconfig2.json"
