--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "module": "es6",
     "target": "es5",
     "esModuleInterop": true,
-    "lib": ["es2015", "es2017", "dom"]
+    "lib": ["es2017"]
   }
 }
