--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc --outDir dist src/index.ts --module commonjs"
+    "build": "tsc --outDir dist src/index.ts --module commonjs --lib es2017"
   },
   "repository": {
     "type": "git",
