--- a/.huskyrc
+++ b/.huskyrc
@@ -1,5 +1,6 @@
 {
   "hooks": {
-    "post-commit": "bash bin/post-commit.sh"
+    "post-commit": "bash bin/post-commit.sh",
+    "pre-receive": "bash bin/pre-receive.sh"
   }
 }
